# islp-study-notes

./: .gitignore  main.py  pyproject.toml
latex/ch-2-notes/: main.tex
